<resources>
    <string name="Accedi">ACCEDI</string>
    <string name="Registrati">REGISTRATI</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="indietro3">INDIETRO</string>
    <string name="Accedi2">ACCEDI</string>
    <string name="app_name">Online Sports</string>
    <string name="email">Inserisci la tua e-mail</string>
    <string name="nome">Inserisci il tuo nome</string>
    <string name="cognome">Inserisci il tuo cognome</string>
    <string name="password">Inserisci la tua password</string>
    <string name="email2">Inserisci la tua e-mail</string>
    <string name="username">Scegli il tuo username</string>
    <string name="Data">Seleziona la tua data di nascita:</string>
    <string name="conferma">Conferma la tua password</string>
    <string name="Sport">Seleziona l\'ambito della tua notizia</string>
    <string name="basket">Basket</string>
    <string name="calcio">Calcio</string>
    <string name="tennis">Tennis</string>
    <string name="nuoto">Nuoto</string>
    <string name="formula_uno">Formula Uno</string>
    <string name="pallavolo">Pallavolo</string>
    <string name="indietro">indietro</string>
    <string name="conferma1">conferma</string>
    <string name="titolo">Inserisci un titolo</string>
    <string name="notizia">Inserisci la notizia</string>
    <string name="aggiungi_una_notizia">Aggiungi una notizia</string>
    <string name="disconnetti">Disconnetti</string>
    <string name="descrizione">Per visualizzare le notizie è necessario selezionare uno o più sport</string>
    <string name="accedianonimo">Oppure accedi in anonimo</string>
    <string name="dati">Dati utente</string>
    <string name="indietro4">Indietro</string>
    <string name="messaggio">Messaggio</string>
    <string name="crea">Creato da:</string>
    <string name="nome2">Nome:</string>
    <string name="cognome2">"Cognome: "</string>
    <string name="username2">Username:</string>
    <string name="email3">Email:</string>
    <string name="dataNascita">Data di nascita:</string>
    <string name="modifica">Modifica</string>
    <string name="manda">Scrivi un messaggio</string>
    <string name="mandato">Questo è un messaggio inviato</string>
    <string name="ricevuto">Questo è un messaggio ricevuto</string>
    <string name="messaggi">Messaggi</string>
    <string name="scrivi_messaggio">Scrivi messaggio</string>
    <string name="invia">Invia</string>
    <string name="todo">TODO</string>

</resources>
