<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagina_home"
    android:background="@drawable/sfondo1">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/UserNome"
                    android:layout_width="237dp"
                    android:layout_height="69dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/disconnetti"
                    android:layout_width="151dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/verde"
                    android:text="@string/disconnetti"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/aggiungi"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:backgroundTint="@color/verde"
                android:text="@string/aggiungi_una_notizia"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/descrizione"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:text="@string/descrizione"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/RicercaCalcio"
                    android:layout_width="wrap_content"
                    android:layout_height="63dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/calcio"
                    android:textColor="@color/black" />

                <Switch
                    android:id="@+id/RicercaTennis"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tennis"
                    android:textColor="@color/black" />

                <Switch
                    android:id="@+id/BasketRicerca"
                    android:layout_width="wrap_content"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:text="@string/basket"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/PallavoloRicerca"
                    android:layout_width="83dp"
                    android:layout_height="67dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/pallavolo"
                    android:textColor="@color/black" />

                <Switch
                    android:id="@+id/Formula1Ricerca"
                    android:layout_width="110dp"
                    android:layout_height="67dp"
                    android:layout_weight="1"
                    android:text="@string/formula_uno"
                    android:textColor="@color/black" />

                <Switch
                    android:id="@+id/NuotoRicerca"
                    android:layout_width="wrap_content"
                    android:layout_height="67dp"
                    android:layout_weight="1"
                    android:text="@string/nuoto"
                    android:textColor="@color/black" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notizie"
                android:layout_width="match_parent"
                android:layout_height="472dp">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>