<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo1">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/Name"
                android:layout_width="396dp"
                android:layout_height="51dp"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textNoSuggestions"
                android:textColorHint="#616161"
                android:autofillHints="" />

            <EditText
                android:id="@+id/Surname"
                android:layout_width="397dp"
                android:layout_height="61dp"
                android:ems="10"
                android:hint="@string/cognome"
                android:inputType="textNoSuggestions"
                android:textColorHint="#616161"
                android:autofillHints="" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="398dp"
                android:layout_height="76dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textNoSuggestions"
                android:textColorHint="#616161" />

            <EditText
                android:id="@+id/Email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email2"
                android:textColorHint="#616161"
                android:autofillHints=""/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword|textNoSuggestions"
                android:textColorHint="#616161"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/conferma"
                android:inputType="textPassword|textNoSuggestions"
                android:textColorHint="#616161" />

            <TextView
                android:id="@+id/Data_nascita"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Data"
                android:textColorHint="#616161"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dataNascita"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="24sp" />

            <CalendarView
                android:id="@+id/calendarView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/cardview_default_radius"
                android:paddingRight="@dimen/cardview_default_radius">

                <Button
                    android:id="@+id/indietro"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:insetLeft="20dp"
                    android:text="@string/indietro"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/registrazione"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="225dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/purple_500"
                    android:insetLeft="100dp"
                    android:text="@string/conferma1"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>