<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-41dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="83dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="458dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/email2"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="298dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="358dp"
            android:ems="10"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="394dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="255dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password3"
            android:layout_width="289dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="493dp"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="81dp"
            android:ems="10"
            android:hint="@string/conferma"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/Nome"
            android:layout_width="307dp"
            android:layout_height="88dp"
            android:layout_alignBottom="@+id/username"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="185dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Cognome"
            android:layout_width="308dp"
            android:layout_height="78dp"
            android:layout_alignBottom="@+id/username"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="94dp"
            android:ems="10"
            android:hint="@string/cognome"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/avanti"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="77dp"
            android:backgroundTint="@color/verde"
            android:text="Avanti >"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/indietro2"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/avanti"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="234dp"
            android:layout_marginBottom="77dp"
            android:backgroundTint="@color/verde"
            android:text="Indietro" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>