<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="731dp"
        android:background="@drawable/sfondo1"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/Password"
            android:layout_width="252dp"
            android:layout_height="83dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="74dp"
            android:layout_marginTop="299dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="349dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_alignBottom="@+id/Password"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="111dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/Accedi2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="227dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="256dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/Accedi2"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/indietro3"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-358dp"
            android:layout_marginEnd="216dp"
            android:layout_marginBottom="254dp"
            android:layout_toEndOf="@+id/Accedi2"
            android:backgroundTint="@color/purple_500"
            android:text="@string/indietro3"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>