<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Utenti"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nome_descr"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/nome2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nome3"
                android:layout_width="209dp"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/cognome2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cognome2"
                android:layout_width="209dp"
                android:layout_height="42dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/username2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/username2"
                android:layout_width="209dp"
                android:layout_height="42dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/email3"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/email3"
                android:layout_width="209dp"
                android:layout_height="42dp"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/dataNascita"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/data_nascita"
                android:layout_width="209dp"
                android:layout_height="42dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>